# Yolo-det

./: .editorconfig  .gitignore  PROJECT_STRUCTURE.md  README.md  confidence.py  learn.py  pyproject.toml  single_image_test.py
OLT_SR/: 1.docx  main.py  test.py  train.py
OLT_SR/configs/: config.py
OLT_SR/data/: dataset.py
OLT_SR/models/: attention.py  blocks.py  model.py  weight_net.py
OLT_SR/utils/: losses.py
configs/: default.yaml
mildew/negative/: guan1_haozhongzi (1).json  guan1_haozhongzi (10).json  guan1_haozhongzi (11).json  guan1_haozhongzi (2).json  guan1_haozhongzi (3).json  guan1_haozhongzi (4).json  guan1_haozhongzi (5).json  guan1_haozhongzi (6).json  guan1_haozhongzi (7).json  guan1_haozhongzi (8).json  jing1_haozhongzi  (1).json  jing1_haozhongzi  (10).json  jing1_haozhongzi  (11).json  jing1_haozhongzi  (12).json  jing1_haozhongzi  (13).json  jing1_haozhongzi  (15).json  jing1_haozhongzi  (16).json  jing1_haozhongzi  (17).json  jing1_haozhongzi  (18).json  jing1_haozhongzi  (19).json  jing1_haozhongzi  (2).json  jing1_haozhongzi  (20).json  jing1_haozhongzi  (21).json  jing1_haozhongzi  (22).json  jing1_haozhongzi  (23).json  jing1_haozhongzi  (24).json  jing1_haozhongzi  (25).json  jing1_haozhongzi  (26).json  jing1_haozhongzi  (27).json  jing1_haozhongzi  (28).json  jing1_haozhongzi  (29).json  (+17 more)
standalone_gradio_demo/: README.md  app.py
tests/: test_geometry.py  test_inference.py  test_labelme.py  test_prepare_integration.py  test_real_data_regression.py  test_roi_decision.py  test_train_entrypoint.py  test_validate.py
(+120 files in other folders)
